# util

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
docs/: CMakeLists.txt
docs/html/: algo_8hpp.html  algo_8hpp_source.html  annotated.html  bitstream_8hpp_source.html  classes.html  classutil_1_1bitstream-members.html  classutil_1_1bitstream.html  classutil_1_1client-members.html  classutil_1_1client.html  classutil_1_1client__after__log__event-members.html  classutil_1_1client__after__log__event.html  classutil_1_1client__before__log__event-members.html  classutil_1_1client__before__log__event.html  classutil_1_1client__communication__event-members.html  classutil_1_1client__communication__event.html  classutil_1_1client__connect__event-members.html  classutil_1_1client__connect__event.html  classutil_1_1client__disconnect__event-members.html  classutil_1_1client__disconnect__event.html  classutil_1_1client__finished__listen__event-members.html  classutil_1_1client__finished__listen__event.html  classutil_1_1client__listen__event-members.html  classutil_1_1client__listen__event.html  classutil_1_1client__receve__event-members.html  classutil_1_1client__receve__event.html  classutil_1_1client__send__event-members.html  classutil_1_1client__send__event.html  classutil_1_1client__start__listen__event-members.html  classutil_1_1client__start__listen__event.html  classutil_1_1event-members.html  classutil_1_1event.html  classutil_1_1event__dispatcher-members.html  classutil_1_1event__dispatcher.html  classutil_1_1logger-members.html  classutil_1_1logger.html  classutil_1_1logger__console__sink-members.html  classutil_1_1logger__console__sink.html  classutil_1_1logger__file__sink-members.html  classutil_1_1logger__file__sink.html  classutil_1_1logger__server__console__sink-members.html  (+82 more)
docs/latex/: algo_8hpp.tex  algo_8hpp_source.tex  annotated.tex  bitstream_8hpp_source.tex  classutil_1_1bitstream.eps  classutil_1_1bitstream.tex  classutil_1_1client.tex  classutil_1_1client__after__log__event.eps  classutil_1_1client__after__log__event.tex  classutil_1_1client__before__log__event.eps  classutil_1_1client__before__log__event.tex  classutil_1_1client__communication__event.eps  classutil_1_1client__communication__event.tex  classutil_1_1client__connect__event.eps  classutil_1_1event.tex  (+69 more)
test/: CMakeLists.txt  math_tests.cpp
(+111 files in other folders)
